--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ button {
     grid-template-columns: 250px 1fr 1fr 1fr;
     grid-template-rows: 120px 1fr;
     grid-gap: 20px;
+
     
 }
 /* 27px/14 = 1.7 */
@@ -159,7 +160,26 @@ button{
     border-radius: 9px;
     background: #FFF;
     box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.order-status-container h2{
+    font-size: 36px;
+    color: var(--color-brand);
+}
+
+.order-status-container p{
+    color: var(--color-brand);
+}
+.order-status-container img{
+    width: 40px;
+    height: 40px;
+}
+.order-status h2{
+   padding: 9px; 
 }
 
 .child1{
@@ -187,7 +207,16 @@ button{
     height: 163px;
     border-radius: 9px;
     box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    padding: 1.43rem;
+}
 
+.order-action-container h3{
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.order-action-container p{
+    font-size: var(--color-secondary);
 }
 
 .child5{
